<resources>
    <string name="app_name">FoodHack</string>
    <string name="title_menu">Меню</string>
    <string name="title_user">Пользователь</string>

    <!-- Title Activity -->
    <string name="title_activity_second">Journal</string>
    <string name="title_activity_language_list">Available languages</string>
    <string name="title_activity_translate">Translate</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Actions -->
    <string name="record">Record</string>
    <string name="save">Save</string>
    <string name="history">Journal</string>
    <string name="translate">Translate</string>
    <string name="delete_record">Delete</string>
    <string name="action_settings">Settings</string>

    <string name="fromLang" translatable="false">en</string>
    <string name="toLang" translatable="false">ru</string>
    <string name="api_lang_array_name">List</string>

    <!-- Error, warnings, tips -->
    <string name="saveTrue">Successful work!</string>
    <string name="saveFalse">A blank entry!</string>
    <string name="translateFalse">A blank entry!</string>
    <string name="addToBase">Добавить в базу</string>
    <string name="showName">Вывести имя</string>
    <string name="title_age">Возраст</string>
    <string name="title_userName">Имя пользователя</string>
    <string name="title_height">Рост</string>
    <string name="title_weight">Вес</string>
    <string name="title_activityUser">Активность</string>

</resources>
