<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.comand.foodhack.Login3ActivityFragment"
    tools:showIn="@layout/activity_login3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_userName"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/etxt_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txt_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Пол"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <RadioGroup
            android:id="@+id/etxt_sexUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_men"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Мужчина" />

            <RadioButton
                android:id="@+id/radioButton_women"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="RadioButton"
                tools:text="Женщина" />


        </RadioGroup>

        <TextView
            android:id="@+id/txt_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_age"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/etxt_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="18"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_height"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/etxt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="170"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txt_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_weight"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/etxt_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="68"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txt_activityUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activityUser"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <RadioGroup
            android:id="@+id/etxt_activityUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Сидячий" />

            <RadioButton
                android:id="@+id/radioButton_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Умеренный" />

            <RadioButton
                android:id="@+id/radioButton_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Активный"
                />


        </RadioGroup>

        <TextView
            android:id="@+id/txt_infoActivityUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Создать" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
